# apinter

./: .gitignore  DEVLOG.md  README.md  pyproject.toml
apinter/: __init__.py  config.py  indices.py
apinter/circulation/: __init__.py  hadley.py  helmholtz.py  psi_phi.py  regrid.py  walker.py
apinter/heat_budget/: __init__.py  advection.py  constants.py  entrainment.py  ml_tendency.py  mld.py  nemo_advection.py  nemo_entrainment.py  nemo_grid.py  nemo_mld.py  pipeline.py  surface_flux.py  tendency.py
apinter/io/: __init__.py  cmip6.py  era5.py  joblib_io.py  lens.py  nersc_cmip6.py  obs.py  oras5.py  ssp.py
apinter/plotting/: __init__.py  circulation.py  index_ts.py  omega_regression.py  spatial_maps.py
apinter/processing/: __init__.py  anomalies.py  filters.py  masks.py  regions.py  regrid.py
apinter/stats/: __init__.py  leadlag.py  regression.py  significance.py  trends.py
apinter/tests/: __init__.py  conftest.py  test_circulation.py  test_heat_budget_advection.py  test_heat_budget_constants.py  test_heat_budget_entrainment.py  test_heat_budget_ml_tendency.py  test_heat_budget_mld.py  test_heat_budget_nemo.py  test_heat_budget_pipeline.py  test_heat_budget_pipeline_regular.py  test_heat_budget_surface_flux.py  test_heat_budget_tendency.py  test_indices.py  test_io.py  test_nersc_io.py  test_pipeline.py  test_processing.py  test_regrid.py  test_stats.py
docs/: migration.md  usage.md
docs/superpowers/plans/: 2026-04-24-heat-budget-plan.md
docs/superpowers/specs/: 2026-04-23-apinter-shared-package-design.md  2026-04-24-heat-budget-design.md  2026-04-24-heat-budget-pipeline-design.md
tests/: conftest.py  test_io.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_plotting.py
