[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "apinter"
version = "0.1.0"
description = "Shared analysis library for Atlantic-Pacific climate interaction research"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Yan Xia", email = "yxia24@uci.edu"}]
keywords = [
    "climate",
    "oceanography",
    "atmospheric-science",
    "walker-circulation",
    "hadley-circulation",
    "cmip6",
    "era5",
    "oras5",
    "xarray",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "scipy",
    "matplotlib",
    "cartopy",
    "cftime",
    "joblib",
    "netCDF4",
    "zarr",
]

[project.optional-dependencies]
circulation = ["windspharm"]
regrid = ["xesmf>=0.8"]
dev = ["pytest"]
heat_budget_io = ["cfgrib>=0.9"]

[tool.pytest.ini_options]
markers = [
    "slow: long-running tests (use 'pytest -m slow' to run; skipped by default)",
]
addopts = "-m 'not slow'"

[project.urls]
Homepage = "https://github.com/Atlantic-Pacific-Interactions/apinter"
Repository = "https://github.com/Atlantic-Pacific-Interactions/apinter"
Issues = "https://github.com/Atlantic-Pacific-Interactions/apinter/issues"

[tool.setuptools.packages.find]
include = ["apinter*"]
